# gomonorepo

./: .bazelignore  .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  MODULE.bazel  Makefile  README.md  bazel-bin  bazel-gomonorepo  bazel-out  bazel-testlogs  docker-compose.yml  go.work  go.work.sum
.github/workflows/: ci.yml
k8s/: README.md
k8s/base/: kustomization.yaml  namespace.yaml
k8s/base/ingress/: ingress.yaml  kustomization.yaml
k8s/base/order-svc/: configmap.yaml  deployment.yaml  hpa-pdb.yaml  kustomization.yaml  service.yaml
k8s/base/user-svc/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  service.yaml
k8s/overlays/development/: kustomization.yaml
k8s/overlays/production/: kustomization.yaml
k8s/scripts/: 01-install-prerequisites.sh  02-build-images.sh  03-deploy.sh  04-debug.sh  05-teardown.sh
proto/: buf.gen.yaml  buf.yaml
proto/user/v1/: user.proto
services/order-svc/: Dockerfile  go.mod  go.sum
services/order-svc/cmd/server/: BUILD.bazel  main.go
services/order-svc/internal/handler/: BUILD.bazel  order_handler.go
services/order-svc/internal/repository/: BUILD.bazel  order_repository.go
services/user-svc/: Dockerfile  go.mod
services/user-svc/cmd/server/: BUILD.bazel  main.go
services/user-svc/internal/grpcserver/: BUILD.bazel  user_grpc_server.go
services/user-svc/internal/handler/: BUILD.bazel  user_handler.go
services/user-svc/internal/repository/: BUILD.bazel  user_repository.go  user_repository_test.go
shared/: go.mod  go.sum
shared/pkg/logger/: BUILD.bazel  logger.go
shared/pkg/middleware/: BUILD.bazel  middleware.go
