load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = ["middleware.go"],
    importpath = "github.com/semmidev/gomonorepo/shared/pkg/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_chi_chi_v5//middleware",
        "@org_uber_go_zap//:zap",
    ],
)
