load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["order_repository.go"],
    importpath = "github.com/semmidev/gomonorepo/services/order-svc/internal/repository",
    visibility = ["//services/order-svc:__subpackages__"],
    deps = ["@com_github_google_uuid//:uuid"],
)
