load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/semmidev/gomonorepo/services/user-svc/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//gen/go/user/v1:user",
        "//services/user-svc/internal/grpcserver",
        "//services/user-svc/internal/handler",
        "//services/user-svc/internal/repository",
        "//shared/pkg/logger",
        "//shared/pkg/middleware",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
