load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repository",
    srcs = ["user_repository.go"],
    importpath = "github.com/semmidev/gomonorepo/services/user-svc/internal/repository",
    visibility = ["//services/user-svc:__subpackages__"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_test(
    name = "repository_test",
    srcs = ["user_repository_test.go"],
    deps = [":repository"],
)
